<resources>
    <string name="app_name">dice_throw</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="roll_all">Roll All</string>
    <string name="roll_once">Roll Once</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="deleteAll">Delete All</string>
    <string name="galery">Gallery</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Map</string>
</resources>