<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/roll_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:onClick="rollOnce"
        android:text="@string/roll_once"
        app:layout_constraintEnd_toStartOf="@+id/Nub_Dice"
        app:layout_constraintTop_toBottomOf="@+id/minus_button" />

    <Button
        android:id="@+id/roll_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:onClick="rollAll"
        android:text="@string/roll_all"
        app:layout_constraintStart_toEndOf="@+id/Nub_Dice"
        app:layout_constraintTop_toBottomOf="@+id/plus_button" />

    <TextView
        android:id="@+id/Nub_Dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="-16dp"
        android:onClick="minus"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/Nub_Dice"
        app:layout_constraintEnd_toStartOf="@+id/Nub_Dice" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="-16dp"
        android:onClick="plus"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/Nub_Dice"
        app:layout_constraintStart_toEndOf="@+id/Nub_Dice" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="132dp"
        android:layout_height="119dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/First_Dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="130dp"
        android:layout_height="118dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Second_Dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="133dp"
        android:layout_height="119dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <ImageView
            android:id="@+id/Third_Dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="121dp"
        android:layout_height="122dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <ImageView
            android:id="@+id/Forth_Dice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:onClick="history"
        android:text="@string/history"
        app:layout_constraintEnd_toStartOf="@+id/roll_all"
        app:layout_constraintStart_toEndOf="@+id/roll_one"
        app:layout_constraintTop_toBottomOf="@+id/Nub_Dice" />
</androidx.constraintlayout.widget.ConstraintLayout>